--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -25,19 +25,20 @@ jobs:
 
       # 1) BEGIN: SonarScanner for .NET
       - name: SonarScanner Begin
-        run: |
-          dotnet tool install --global dotnet-sonarscanner
-          echo "$env:USERPROFILE\.dotnet\tools" >> $env:GITHUB_PATH
-          dotnet sonarscanner begin `
-            /d:sonar.projectKey="<Project Key>" `
-            /d:sonar.organization="<Organization Key>" `
-            /d:sonar.token="${{ secrets.SONAR_TOKEN }}" `
-            /d:sonar.cs.opencover.reportsPaths="**/coverage.xml" `
-            /d:sonar.cpd.cs.minimumTokens=40 `
-            /d:sonar.cpd.cs.minimumLines=5 `
-            /d:sonar.exclusions=**/bin/**,**/obj/**,**/sonarcloud.yml `
-            /d:sonar.qualitygate.wait=true
-        shell: pwsh
+  run: |
+    dotnet tool install --global dotnet-sonarscanner
+    echo "$env:USERPROFILE\.dotnet\tools" >> $env:GITHUB_PATH
+    dotnet sonarscanner begin `
+      /k:"<Project Key>" `
+      /o:"<Organization Key>" `
+      /d:sonar.token="${{ secrets.SONAR_TOKEN }}" `
+      /d:sonar.cs.opencover.reportsPaths="**/coverage.xml" `
+      /d:sonar.cpd.cs.minimumTokens=40 `
+      /d:sonar.cpd.cs.minimumLines=5 `
+      /d:sonar.exclusions=**/bin/**,**/obj/**,**/sonarcloud.yml `
+      /d:sonar.qualitygate.wait=true
+  shell: pwsh
+
 
       # 2) BUILD & TEST
       - name: Restore
